Bug 37778 - FILEOPEN, UI - Read-only recommended .doc files open with protected sections
Summary: FILEOPEN, UI - Read-only recommended .doc files open with protected sections
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium major
Assignee: Justin L
URL:
Whiteboard: target:6.2.0
Keywords: filter:doc
Depends on:
Blocks: DOC
  Show dependency treegraph
 
Reported: 2011-05-31 00:12 UTC by Nicholas van Oudtshoorn
Modified: 2019-01-02 16:58 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Simple test document (29.00 KB, application/msword)
2011-05-31 00:12 UTC, Nicholas van Oudtshoorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicholas van Oudtshoorn 2011-05-31 00:12:11 UTC
Created attachment 47348 [details]
Simple test document

When opening a .doc file which has security set to read-only, the file opens read only in Writer (as expected). *However*, when choosing to manually enable editing (by clicking the "Edit File" icon), the content comes appears in an protected section.

A test document is attached. Upon opening, it is set to read-only. Clicking "Edit File" changes the *document* property to editable, but the content is shown to be in a protected section. 

A work-around is to enable document editing, and then to manually unset the protection on each section in the document. (Format->Section, untick "Protect")

Opening this file in Word 2010 brings up a dialogue stating:

   <File> should be opened as read-only unless changes to it need to be saved. Open as read-only? [Yes] [No] [Cancel] [Help]

If, in Word 2010, one says "no" to that prompt, the file is completely editable (*no* protected sections).

At least one person in the office here has been incredibly frustrated by not being able to edit a document no matter what he tried.

I suspect this is an import error, as well as a UI problem. (We need to be clearer about opening read-only files).

Tested under Linux/LibO3.4RC2 and Windows/LibO3.3
Comment 1 Rainer Bielefeld Retired 2011-06-10 02:57:47 UTC
RC2 is bit by bit identical with release version, so separate items in the version picker are useless. Changes have been discussed with Michael Meeks.
Comment 2 Björn Michaelsen 2011-12-23 12:02:40 UTC Comment hidden (obsolete)
Comment 3 sasha.libreoffice 2012-01-25 22:03:33 UTC
reproduced in LibO 3.6.0 master on Fedora 64 bit
document has one section when opened, but probably so should be
Comment 4 Nicholas van Oudtshoorn 2012-01-26 23:59:18 UTC
Reproduced also in 3.5.0RC2 running on Fedora 16, x86_64
Comment 5 A (Andy) 2013-05-06 21:02:04 UTC
reproducible with LO 4.0.2.2 (Win7 Home, 64bit)
Comment 6 Nicholas van Oudtshoorn 2013-10-17 06:09:29 UTC
Still persists in 4.1.2.3.
Comment 7 Nicholas van Oudtshoorn 2014-07-15 07:41:23 UTC
Still present in 4.2.5.2 (Fedora 20, x86_64)
Comment 8 ign_christian 2014-07-15 09:47:44 UTC
Reproduced in LO 4.3.0.2, 3.3.0.4 (Ubuntu 12.04 x86). Also with AOO 4.1.0

So best guess is an old issue inherited from OOO
Comment 9 steve 2015-06-18 08:23:29 UTC
Persisting

OS X 10.10.3
Version: 5.1.0.0.alpha1+
Build ID: fb6dd2a73074b9695bd8ddf7ba40f1819b03024e
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2015-06-17_23:34:12
Locale: de-DE (de.UTF-8)
Comment 10 QA Administrators 2016-09-20 10:01:12 UTC Comment hidden (obsolete)
Comment 11 Xisco Faulí 2017-10-03 15:25:39 UTC
Still reproducible in

Version: 6.0.0.0.alpha0+
Build ID: 34e8fd7e99489e9f50a512b07c6f3923b358b4d3
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 12 QA Administrators 2018-10-04 02:55:11 UTC Comment hidden (obsolete)
Comment 13 Nicholas van Oudtshoorn 2018-10-08 04:03:22 UTC
Still present

Tested in latest nightly build:

Version: 6.2.0.0.alpha0+
Build ID: e7d5bad5ae083da12c3ec4a4a8bdc8b42447a242
CPU threads: 4; OS: Linux 4.18; UI render: default; VCL: kde4; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-10-06_01:01:43
Locale: en-AU (en_AU.UTF-8); Calc: threaded
Comment 14 Justin L 2018-10-18 05:39:49 UTC
Proposed fix at https://gerrit.libreoffice.org/61899
Comment 15 Commit Notification 2018-10-18 06:37:04 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8ba20167034f38ea2984bc8fb0e785da107cb82b

tdf#37778 ww8import: protect section only if protEnabled

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.