tdf#37778 ww8import: protect section only if protEnabled

Protection is not related to fReadOnlyRecommended

In Word, documentProtection enforcement is a document level
setting which is required for the section protection setting
to be enforced. formprot: "The enforcement of this property
is determined by the documentProtection element (§17.15.1.29),
as it is possible to specify protection without turning it on."

In LO, section protection is honored if it is simply enabled,
so only enable a section's protection if the enforcement
variable is set. Round-tripping will lose the fact that
sections are marked as protected if the enforcement is off.

patch initially developed to support tdf#120499 where
the focus is on sections, not on read-only and the
fake section that was being created.

Change-Id: I08c37ea6a9cc8fd1bdf7f36771b2d719bf9c93d6
Reviewed-on: https://gerrit.libreoffice.org/61899
Reviewed-by: Justin Luth <justin_luth@sil.org>
Tested-by: Justin Luth <justin_luth@sil.org>
(cherry picked from commit 8ba20167034f38ea2984bc8fb0e785da107cb82b)